--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,19 @@
-title: Anu Shrestha # your name (or website title) here
-logo: "/images/anu_profile.jpeg?raw=true" # your photo (or logo) here
+title: <p align="center"> Anu Shrestha </p>
+logo: "/images/anu_profile.jpeg?raw=true" 
+
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
-  <br><br>
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/anu-shrestha-ph-d-1286118b/">View My LinkedIn Profile</a> 
+  <a href="https://github.com/chriskhanhtran">GitHub</a>
+  </p>
+  
+  <p align="justify">
+  I am a Ph.D. graduate from Boise State University.
+  <br><br>
+  I am a Ph.D. graduate from Boise State University.
+  <br><br>
+  </p>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
