--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   </p>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+#google_analytics: UA-000000-0 # your Google Analytics tracking ID here
